--- a/.csslintrc
+++ b/.csslintrc
@@ -1,1 +1,2 @@
---ignore=adjoining-classes,box-sizing,compatible-vendor-prefixes,ids,important,outline-none,universal-selector,vendor-prefix,zero-units
+--ignore=import,order-alphabetical,adjoining-classes,box-sizing,compatible-vendor-prefixes,ids,important,outline-none,universal-selector,vendor-prefix,zero-units
+
