--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "strict": 1,
     "max-len": 1,
     "comma-dangle": 1,
-    "no-param-reassign": 1
+    "no-param-reassign": 1,
+    "no-nested-ternary": 1
   }
 }
